# NAW

./: .gitignore  CMakeLists.txt  this_file_should_not_exist_123456789.json
config/: ai_service_config.json
docs/analysis/: FunctionCalling_vs_MCP_分析.md
docs/design/: Agent桌宠应用设计方案.md  Layer1_YOLO_技术选型方案.md  NPC生命线与叙事管理系统设计方案.md  工具与LLM集成说明.md  服务层设计方案.md
docs/examples/: FunctionCalling使用示例.md
docs/todolists/: TODO_实现任务清单.md  TODO_服务层开发任务清单.md
docs/todolists/service_layer/: TODO_Phase1_基础设施层.md  TODO_Phase2_API客户端层.md  TODO_Phase3_核心管理层.md  TODO_Phase4_服务管理层.md  TODO_Phase5_工具调用层.md  TODO_Phase6_多模态服务层.md
include/naw/agent/: Agent.h  AgentSerialization.h  AgentSerializer.h  AgentTypes.h  README.md
include/naw/desktop_pet/service/: APIClient.h  CacheManager.h  CodeTools.h  ConfigManager.h  ContextManager.h  ContextRefiner.h  ErrorHandler.h  ErrorTypes.h  FunctionCallingHandler.h  ImageProcessor.h  ModelManager.h  ProjectContextCollector.h  RequestManager.h  ResponseHandler.h  ScreenCapture.h  SpeechService.h  TaskRouter.h  ToolCallContext.h  ToolManager.h  VisionLayer0.h
include/naw/desktop_pet/service/platform/: ScreenCaptureLinux.h  ScreenCaptureMacOS.h  ScreenCaptureWindows.h
include/naw/desktop_pet/service/tools/: CMakeParser.h  CodeToolsUtils.h  GitIgnoreParser.h  ProjectStructureCache.h  ProjectWhitelist.h
include/naw/desktop_pet/service/types/: ChatMessage.h  CommonTypes.h  ImageData.h  ModelConfig.h  RequestResponse.h  TaskPriority.h  TaskType.h
include/naw/desktop_pet/service/utils/: AudioProcessor.h  HttpClient.h  HttpSerialization.h  HttpTypes.h  TokenCounter.h  TokenUsageClient.h
src/naw/agent/: Agent.cpp  AgentSerializer.cpp  CMakeLists.txt
src/naw/desktop_pet/service/: APIClient.cpp  CMakeLists.txt  CacheManager.cpp  CodeTools.cpp  ConfigManager.cpp  ContextManager.cpp  ContextRefiner.cpp  ErrorHandler.cpp  FunctionCallingHandler.cpp  ImageProcessor.cpp  ModelManager.cpp  ProjectContextCollector.cpp  RequestManager.cpp  ResponseHandler.cpp  ScreenCapture.cpp  SpeechService.cpp  TaskRouter.cpp  ToolCallContext.cpp  ToolManager.cpp  VisionLayer0.cpp
src/naw/desktop_pet/service/examples/: api_client_chat_example.cpp  function_calling_example.cpp  prompt.txt  stt_llm_voice_chat_example.cpp
src/naw/desktop_pet/service/platform/: ScreenCaptureWindows.cpp
src/naw/desktop_pet/service/tests/: APIClientTest.cpp  CacheManagerTest.cpp  CodeToolsTest.cpp  ConfigManagerTest.cpp  ContextManagerTest.cpp  ContextRefinerTest.cpp  ErrorHandlerTest.cpp  FunctionCallingHandlerTest.cpp  ImageProcessorTest.cpp  ModelManagerTest.cpp  Phase4IntegrationTest.cpp  ProjectContextCollectorTest.cpp  RequestManagerTest.cpp  ResponseHandlerTest.cpp  ScreenCaptureTest.cpp  SpeechServiceTest.cpp  TaskRouterTest.cpp  ToolLLMIntegrationTest.cpp  ToolManagerTest.cpp  TypesChatMessageTest.cpp  TypesModelConfigTest.cpp  TypesRequestResponseTest.cpp  TypesTaskTypeTest.cpp  VisionLayer0Test.cpp
src/naw/desktop_pet/service/tools/: AnalyzeCodeTool.cpp  CMakeParser.cpp  CodeToolsUtils.cpp  GetProjectStructureTool.cpp  GitIgnoreParser.cpp  ListFilesTool.cpp  ProjectStructureCache.cpp  ProjectWhitelist.cpp  ReadFileTool.cpp  SearchCodeTool.cpp  WriteFileTool.cpp
src/naw/desktop_pet/service/utils/: AudioProcessor.cpp  CMakeLists.txt  HttpClient.cpp  HttpSerialization.cpp  TokenCounter.cpp  TokenUsageClient.cpp
src/naw/desktop_pet/service/utils/examples/: audio_processor_example.cpp  http_client_example.cpp
src/naw/desktop_pet/service/utils/tests/: AudioProcessorTest.cpp  HttpClientTest.cpp  TokenCounterTest.cpp  TokenUsageClientTest.cpp
